# Sonara

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  README.md  diagnose_result.txt
.github/workflows/: build.yml
app/: index.html  package-lock.json  package.json
app/electron/: licensing.cjs  main.cjs  paramBridge.cjs  preload.cjs  statusBridge.cjs
app/src/: App.css  App.tsx  audio.ts  fft.ts  global.d.ts  i18n.ts  presets.ts
app/src/components/: ControlSidebar.tsx  EngineBar.tsx  Equalizer.tsx  Header.tsx  Modals.tsx  TopBar.tsx  Visualizer.tsx
app/src/hooks/: useEngine.ts  useLocalStorage.ts  usePresets.ts
docs/: ARCHITECTURE.md  BUILD.md  COMMERCIAL.md  ROADMAP.md
engine/: .clang-format  BoosterAPO.inf  CMakeLists.txt  SonaraAPO.inf  diagnose_result.txt
engine/scripts/: diagnose-engine.ps1  install-engine.ps1  loopback-test.ps1  sonara.nsi  uninstall-engine.ps1
engine/src/: BoosterAPO.def  SonaraAPO.def  dllmain.cpp
engine/src/apo/: BoosterAPO.cpp  BoosterAPO.h  ClassFactory.cpp  ClassFactory.h  SharedParams.h  SharedStatus.h  SonaraAPO.cpp  SonaraAPO.h  StatusBlock.h
engine/src/dsp/: Biquad.h  BoostEngine.h  Compressor.h  Denormals.h  Limiter.h  Parameters.h  StereoEnhancer.h
engine/src/gui/: main.cpp  resources.rc
engine/src/host/: main.cpp
engine/test/: dsp_test.cpp
src/: BoosterAPO.cpp  BoosterAPO.h  dllmain.cpp
ui/: package.json
ui/electron/: main.cjs  preload.cjs
ui/src/: App.css  App.tsx  global.d.ts
